--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "@google-cloud/debug-agent": "^5.2.7",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.1.8",
@@ -22,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --config=jest.config.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,7 +42,14 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-typescript": "^7.15.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^11.2.7",
+    "@types/jest": "^27.0.1",
     "@types/react-dom": "^17.0.9",
+    "babel-jest": "^27.1.0",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.5"
   }
 }
